[tool.poetry]
name = "vaitk"
version = "1.7.0"
description = "VaiTk is a terminal-based graphical toolkit, similar to Qt"
authors = ["Stefano Borini <stefano.borini@gmail.com>"]
license = "BSD-3-Clause"
keywords = ["library", 'terminal', 'curses']
repository="https://github.com/stefanoborini/vaitk"
classifiers=[
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    ]

[tool.poetry.dependencies]
python = "^3.5"
traitlets = "^4.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
autopep8 = "^1.4"
pytest = "^5.3"
codecov = "^2.0"
coverage = "^4.5"
bumpversion = "^0.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
